@@ -59,7 +59,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -94,8 +93,8 @@ public class JobThrottlingTest {
     private boolean mDeviceIdleEnabled;
     private boolean mDeviceLightIdleEnabled;
     private boolean mAppStandbyEnabled;
+    private String mInitialActivityManagerConstants;
     private String mInitialDisplayTimeout;
-    private String mInitialRestrictedBucketEnabled;
     private String mInitialBatteryStatsConstants;
     private boolean mAutomotiveDevice;
     private boolean mLeanbackOnly;
@@ -139,8 +138,6 @@ public class JobThrottlingTest {
         } else {
             Log.w(TAG, "App standby not enabled on test device");
         }
-        mInitialRestrictedBucketEnabled = Settings.Global.getString(mContext.getContentResolver(),
-                Settings.Global.ENABLE_RESTRICTED_BUCKET);
         mInitialBatteryStatsConstants = Settings.Global.getString(mContext.getContentResolver(),
                 Settings.Global.BATTERY_STATS_CONSTANTS);
         // Make sure ACTION_CHARGING is sent immediately.
@@ -161,6 +158,13 @@ public class JobThrottlingTest {
         mInitialDisplayTimeout =
                 Settings.System.getString(mContext.getContentResolver(), SCREEN_OFF_TIMEOUT);
         Settings.System.putString(mContext.getContentResolver(), SCREEN_OFF_TIMEOUT, "300000");
+
+        mInitialActivityManagerConstants = Settings.Global.getString(mContext.getContentResolver(),
+                Settings.Global.ACTIVITY_MANAGER_CONSTANTS);
+        // Delete any activity manager constants overrides so that the default transition time
+        // of 60 seconds for UID active to UID idle is used.
+        Settings.Global.putString(mContext.getContentResolver(),
+                Settings.Global.ACTIVITY_MANAGER_CONSTANTS, null);
 
         // In automotive device, always-on screen and endless battery charging are assumed.
         mAutomotiveDevice =
@@ -428,6 +432,47 @@ public class JobThrottlingTest {
     }
 
     @Test
+    public void testBackgroundUIJsThermal() throws Exception {
+        try (TestNotificationListener.NotificationHelper notificationHelper =
+                     new TestNotificationListener.NotificationHelper(
+                             mContext, TestAppInterface.TEST_APP_PACKAGE)) {
+            mTestAppInterface.postUiInitiatingNotification(
+                    Map.of(TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true),
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
+            notificationHelper.clickNotification();
+
+            assertTrue("Job did not start after scheduling",
+                    mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT));
+
+            ThermalUtils.overrideThermalStatus(Temperature.THROTTLING_MODERATE);
+            assertFalse("Job stopped below thermal throttling threshold",
+                    mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
+
+            ThermalUtils.overrideThermalStatus(Temperature.THROTTLING_SEVERE);
+            assertTrue("Job did not stop on thermal throttling",
+                    mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
+            final long jobStopTime = System.currentTimeMillis();
+
+            ThermalUtils.overrideThermalStatus(Temperature.THROTTLING_CRITICAL);
+            runJob();
+            assertFalse("Job started above thermal throttling threshold",
+                    mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT));
+
+            ThermalUtils.overrideThermalStatus(Temperature.THROTTLING_EMERGENCY);
+            runJob();
+            assertFalse("Job started above thermal throttling threshold",
+                    mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT));
+
+            Thread.sleep(Math.max(0, TestJobSchedulerReceiver.JOB_INITIAL_BACKOFF
+                    - (System.currentTimeMillis() - jobStopTime)));
+            ThermalUtils.overrideThermalNotThrottling();
+            runJob();
+            assertTrue("Job did not start back from throttling",
+                    mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT));
+        }
+    }
+
+    @Test
     public void testForegroundJobsThermal() throws Exception {
         // Turn the screen on to ensure the app gets into the TOP state.
         setScreenState(true);
@@ -454,13 +499,10 @@ public class JobThrottlingTest {
     @Test
     public void testJobsInRestrictedBucket_ParoleSession() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
-
-        setRestrictedBucketEnabled(true);
 
         // Disable coalescing
         mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
@@ -492,8 +534,6 @@ public class JobThrottlingTest {
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
 
-        setRestrictedBucketEnabled(true);
-
         // Disable coalescing
         mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
         mDeviceConfigStateHelper.set("qc_max_session_count_restricted", "1");
@@ -521,13 +561,10 @@ public class JobThrottlingTest {
     @Test
     public void testJobsInRestrictedBucket_DeferredUntilFreeResources() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
-
-        setRestrictedBucketEnabled(true);
 
         // Disable coalescing
         mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
@@ -566,14 +603,11 @@ public class JobThrottlingTest {
     @Test
     public void testJobsInRestrictedBucket_NoRequiredNetwork() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
         assumeFalse("not testable, since ethernet is connected", hasEthernetConnection());
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
-
-        setRestrictedBucketEnabled(true);
 
         // Disable coalescing and the parole session
         mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
@@ -608,16 +642,13 @@ public class JobThrottlingTest {
     @Test
     public void testJobsInRestrictedBucket_WithRequiredNetwork() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
         assumeFalse("not testable, since ethernet is connected", hasEthernetConnection());
         assumeTrue(mNetworkingHelper.hasWifiFeature());
         mNetworkingHelper.ensureSavedWifiNetwork();
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
-
-        setRestrictedBucketEnabled(true);
 
         // Disable coalescing and the parole session
         mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
@@ -662,8 +693,7 @@ public class JobThrottlingTest {
     @Test
     public void testJobsInNeverApp() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
@@ -677,8 +707,8 @@ public class JobThrottlingTest {
 
     @Test
     public void testUidActiveBypassesStandby() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        assumeTrue("app standby not enabled", mAppStandbyEnabled);
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
@@ -694,9 +724,6 @@ public class JobThrottlingTest {
 
     @Test
     public void testBatterySaverOff() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
-
         BatteryUtils.assumeBatterySaverFeature();
 
         setChargingState(false);
@@ -708,9 +735,6 @@ public class JobThrottlingTest {
 
     @Test
     public void testBatterySaverOn() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
-
         BatteryUtils.assumeBatterySaverFeature();
 
         setChargingState(false);
@@ -722,9 +746,6 @@ public class JobThrottlingTest {
 
     @Test
     public void testUidActiveBypassesBatterySaverOn() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
-
         BatteryUtils.assumeBatterySaverFeature();
 
         setChargingState(false);
@@ -737,9 +758,6 @@ public class JobThrottlingTest {
 
     @Test
     public void testBatterySaverOnThenUidActive() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
-
         BatteryUtils.assumeBatterySaverFeature();
 
         // Enable battery saver, and schedule a job. It shouldn't run.
@@ -757,9 +775,6 @@ public class JobThrottlingTest {
 
     @Test
     public void testExpeditedJobBypassesBatterySaverOn() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
-
         BatteryUtils.assumeBatterySaverFeature();
 
         setChargingState(false);
@@ -771,9 +786,6 @@ public class JobThrottlingTest {
 
     @Test
     public void testExpeditedJobBypassesBatterySaver_toggling() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
-
         BatteryUtils.assumeBatterySaverFeature();
 
         setChargingState(false);
@@ -958,9 +970,8 @@ public class JobThrottlingTest {
 
     @Test
     public void testUserInitiatedJobBypassesBatterySaverOn() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
         BatteryUtils.assumeBatterySaverFeature();
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -972,7 +983,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("New user-initiated job failed to start with battery saver ON",
@@ -982,9 +993,8 @@ public class JobThrottlingTest {
 
     @Test
     public void testUserInitiatedJobBypassesBatterySaver_toggling() throws Exception {
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
         BatteryUtils.assumeBatterySaverFeature();
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -996,7 +1006,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("New user-initiated job failed to start with battery saver ON",
@@ -1011,6 +1021,7 @@ public class JobThrottlingTest {
     @Test
     public void testUserInitiatedJobBypassesDeviceIdle() throws Exception {
         assumeTrue("device idle not enabled", mDeviceIdleEnabled);
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -1021,7 +1032,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("Job did not start after scheduling",
@@ -1032,6 +1043,7 @@ public class JobThrottlingTest {
     @Test
     public void testUserInitiatedJobBypassesDeviceIdle_toggling() throws Exception {
         assumeTrue("device idle not enabled", mDeviceIdleEnabled);
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -1042,7 +1054,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("Job did not start after scheduling",
@@ -1055,19 +1067,18 @@ public class JobThrottlingTest {
     }
 
     @Test
-    public void testRestrictingStopReason_RestrictedBucket() throws Exception {
+    public void testRestrictingStopReason_RestrictedBucket_connectivity() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        // Tests cannot disable ethernet network.
         assumeFalse("not testable, since ethernet is connected", hasEthernetConnection());
 
+        assumeTrue(BatteryUtils.hasBattery());
         assumeTrue(mNetworkingHelper.hasWifiFeature());
         mNetworkingHelper.ensureSavedWifiNetwork();
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
 
-        setRestrictedBucketEnabled(true);
         setTestPackageStandbyBucket(Bucket.RESTRICTED);
 
         // Disable coalescing and the parole session
@@ -1082,8 +1093,6 @@ public class JobThrottlingTest {
         setScreenState(false);
         triggerJobIdle();
 
-        // Toggle individual constraints
-
         // Connectivity
         mTestAppInterface.scheduleJob(false, NETWORK_TYPE_ANY, false);
         runJob();
@@ -1094,10 +1103,29 @@ public class JobThrottlingTest {
                 mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
         assertEquals(JobParameters.STOP_REASON_CONSTRAINT_CONNECTIVITY,
                 mTestAppInterface.getLastParams().getStopReason());
-        mNetworkingHelper.setAllNetworksEnabled(true);
+    }
+
+    @Test
+    public void testRestrictingStopReason_RestrictedBucket_idle() throws Exception {
+        assumeTrue("app standby not enabled", mAppStandbyEnabled);
+
+        // This test is designed for the old quota system.
+        mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
+
+        setTestPackageStandbyBucket(Bucket.RESTRICTED);
+
+        // Disable coalescing and the parole session
+        mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
+        mDeviceConfigStateHelper.set("qc_max_session_count_restricted", "0");
+
+        // Satisfy all additional constraints.
+        setChargingState(true);
+        BatteryUtils.runDumpsysBatterySetLevel(100);
+        setScreenState(false);
+        triggerJobIdle();
 
         // Idle
-        mTestAppInterface.scheduleJob(false, NETWORK_TYPE_ANY, false);
+        mTestAppInterface.scheduleJob(false, NETWORK_TYPE_NONE, false);
         runJob();
         assertTrue("New job didn't start in RESTRICTED bucket",
                 mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT));
@@ -1106,11 +1134,31 @@ public class JobThrottlingTest {
                 mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
         assertEquals(JobParameters.STOP_REASON_APP_STANDBY,
                 mTestAppInterface.getLastParams().getStopReason());
+    }
+
+    @Test
+    public void testRestrictingStopReason_RestrictedBucket_charging() throws Exception {
+        assumeTrue("app standby not enabled", mAppStandbyEnabled);
+        // Can't toggle charging state if there's no battery.
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
+
+        // This test is designed for the old quota system.
+        mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
+
+        setTestPackageStandbyBucket(Bucket.RESTRICTED);
+
+        // Disable coalescing and the parole session
+        mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
+        mDeviceConfigStateHelper.set("qc_max_session_count_restricted", "0");
+
+        // Satisfy all additional constraints.
+        setChargingState(true);
+        BatteryUtils.runDumpsysBatterySetLevel(100);
         setScreenState(false);
         triggerJobIdle();
 
         // Charging
-        mTestAppInterface.scheduleJob(false, NETWORK_TYPE_ANY, false);
+        mTestAppInterface.scheduleJob(false, NETWORK_TYPE_NONE, false);
         runJob();
         assertTrue("New job didn't start in RESTRICTED bucket",
                 mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT));
@@ -1119,13 +1167,30 @@ public class JobThrottlingTest {
                 mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
         assertEquals(JobParameters.STOP_REASON_APP_STANDBY,
                 mTestAppInterface.getLastParams().getStopReason());
+    }
+
+    @Test
+    public void testRestrictingStopReason_RestrictedBucket_batteryNotLow() throws Exception {
+        assumeTrue("app standby not enabled", mAppStandbyEnabled);
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
+
+        // This test is designed for the old quota system.
+        mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
+
+        setTestPackageStandbyBucket(Bucket.RESTRICTED);
+
+        // Disable coalescing and the parole session
+        mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
+        mDeviceConfigStateHelper.set("qc_max_session_count_restricted", "0");
+
+        // Satisfy all additional constraints.
         setChargingState(true);
         BatteryUtils.runDumpsysBatterySetLevel(100);
-
-        // Battery not low
         setScreenState(false);
         triggerJobIdle();
-        mTestAppInterface.scheduleJob(false, NETWORK_TYPE_ANY, false);
+
+        // Battery not low
+        mTestAppInterface.scheduleJob(false, NETWORK_TYPE_NONE, false);
         runJob();
         assertTrue("New job didn't start in RESTRICTED bucket",
                 mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT));
@@ -1139,8 +1204,7 @@ public class JobThrottlingTest {
     @Test
     public void testRestrictingStopReason_Quota() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice); // Test needs battery
-        assumeFalse("not testable in leanback device", mLeanbackOnly); // Test needs battery
+        assumeTrue("device doesn't have battery", BatteryUtils.hasBattery());
 
         // This test is designed for the old quota system.
         mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
@@ -1277,7 +1341,7 @@ public class JobThrottlingTest {
         mTestAppInterface.cleanup();
         mUiDevice.executeShellCommand("cmd jobscheduler monitor-battery off");
         BatteryUtils.runDumpsysBatteryReset();
-        BatteryUtils.enableBatterySaver(false);
+        BatteryUtils.resetBatterySaver();
         Settings.Global.putString(mContext.getContentResolver(),
                 Settings.Global.BATTERY_STATS_CONSTANTS, mInitialBatteryStatsConstants);
         removeTestAppFromTempWhitelist();
@@ -1286,8 +1350,6 @@ public class JobThrottlingTest {
         mDeviceConfigStateHelper.restoreOriginalValues();
         mActivityManagerDeviceConfigStateHelper.restoreOriginalValues();
         mTareDeviceConfigStateHelper.restoreOriginalValues();
-        Settings.Global.putString(mContext.getContentResolver(),
-                Settings.Global.ENABLE_RESTRICTED_BUCKET, mInitialRestrictedBucketEnabled);
 
         mUiDevice.executeShellCommand(
                 "cmd jobscheduler reset-execution-quota -u " + UserHandle.myUserId()
@@ -1295,16 +1357,14 @@ public class JobThrottlingTest {
 
         Settings.System.putString(
                 mContext.getContentResolver(), SCREEN_OFF_TIMEOUT, mInitialDisplayTimeout);
+
+        Settings.Global.putString(mContext.getContentResolver(),
+                Settings.Global.ACTIVITY_MANAGER_CONSTANTS, mInitialActivityManagerConstants);
     }
 
     private void setTestPackageRestricted(boolean restricted) throws Exception {
         AppOpsUtils.setOpMode(TEST_APP_PACKAGE, "RUN_ANY_IN_BACKGROUND",
                 restricted ? AppOpsManager.MODE_IGNORED : AppOpsManager.MODE_ALLOWED);
-    }
-
-    private void setRestrictedBucketEnabled(boolean enabled) {
-        Settings.Global.putString(mContext.getContentResolver(),
-                Settings.Global.ENABLE_RESTRICTED_BUCKET, enabled ? "1" : "0");
     }
 
     private void toggleAutoRestrictedBucketOnBgRestricted(boolean enable) {
